# beanbot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: bot.py  graph.py
src/services/: categorization.py  progress.py  tools.py  weather.py
