[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ryanbot"
version = "0.2.0"
description = "A production-grade personal assistant Discord bot using LangGraph and Vertex AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
    "google-cloud-aiplatform>=1.38.0",
    "langgraph>=0.0.10",
    "langchain-google-vertexai>=0.0.1",
    "langchain-core>=0.1.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
    "beautifulsoup4>=4.12.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite",
    "pymupdf>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
