[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beanbot"
version = "1.8.1"
description = "A personal gardening assistant Discord bot using LangGraph and Google Gemini."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.0.10",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.1.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
    "beautifulsoup4>=4.12.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite",
    "pymupdf>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "bump-my-version>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.bumpversion]
current_version = "1.8.1"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "release: v{new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"
